add favicon and add img box-shadow

--- a/src/sass/layouts/_one-card.scss
+++ b/src/sass/layouts/_one-card.scss
@@ -4,6 +4,7 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
   &__box-img {
     margin-bottom: 10px;
