Header-style-correction

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,14 +4,14 @@
 
       <a href="" class="header-logo navEl" page="home">
         <svg height="24" width="24" class="hednavEler__icon-film">
-          <use href="./images/sprite.svg#icon-film"></use>
+          <use href="./images/sprite.svg#icon-film" class="logo-icon"></use>
         </svg>
         <h1 class="page-title">Filmoteka</h1>
       </a>
      
       <ul class="page-nav_wrapper">
         <li>
-          <button class="nav-el nav-el_button navEl" page="home">HOME</button>  
+          <button class="nav-el nav-el_button navEl active-page" page="home">HOME</button>  
         </li>
         <li>
           <button class="nav-el nav-el_button navEl" page="library">MY LIBRARY</button>
