--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -24,6 +24,6 @@ $accent-text-color: #ffffff;
 $details-card-main-text-color: #000000;
 $details-card-items-text-color: #8c8c8c;
 
-$header-background-color: rgba(0, 0, 0, 0.56);
+$header-background-color: rgba(48,49,59,0.4);
 $main-background-color: #ffffff;
 $footer-background-color: #f7f7f7;
