--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,7 @@
 @import './layouts/header';
 @import './layouts/pagination';
 
+@import './components/spinner';
 @import './components/modal';
 @import './components/footer-modal';
 @import './components/to-top-btn';
@@ -21,4 +22,3 @@
 @import './layouts/films-list-section';
 @import './layouts/film-list-is-empty';
 @import './layouts/one-card';
-
