header bug fixing

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,12 +2,12 @@
   <div class="page-header">
     <div class="page-nav_container">
 
-      <a href="" class="header-logo navEl" page="home">
+      <div class="header-logo">
         <svg height="24" width="24" class="hednavEler__icon-film">
           <use href="./images/sprite.svg#icon-film" class="logo-icon"></use>
         </svg>
         <h1 class="page-title">Filmoteka</h1>
-      </a>
+      </div>
      
       <ul class="page-nav_wrapper">
         <li>
