--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -27,3 +27,4 @@ $details-card-items-text-color: #8c8c8c;
 $header-background-color: rgba(48,49,59,0.4);
 $main-background-color: #ffffff;
 $footer-background-color: #f7f7f7;
+$header-background-library-color: #000000
