--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,4 +1,9 @@
 .modal {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  height: 500px;
+  overflow-y: auto;
   margin: $column-gap-mobile;
   padding: 48px $column-gap-mobile;
   color: $details-card-main-text-color;
@@ -17,22 +22,29 @@
   }
 
   @include for-desktop-up {
+    justify-content: space-around;
     padding: 50px $column-gap;
     min-width: 882px;
   }
 }
 
-ul {
+ul,
+span {
   margin: 0;
 }
 
 li {
+  margin: 0;
   list-style: none;
 }
 
 .modal-window-content {
+  width: 240px;
+  margin-left: auto;
+  margin-right: auto;
   @include for-tablet-up {
-    width: 262px;
+    width: 264px;
+    margin: 0;
   }
   @include for-desktop-up {
     width: 396px;
@@ -65,35 +77,48 @@ li {
 
 .poster {
   width: 240px;
-  margin-bottom: 30px;
+  margin: 0 0 30px 0;
   @include for-tablet-up {
     width: 264px;
     margin: 0;
   }
   @include for-desktop-up {
-    width: 396px;
-    height: 478px;
+    width: 300px;
+    height: 430px;
   }
 }
 
-.properties-list {
+.properties {
+  display: flex;
+  justify-content: space-between;
   margin-top: 20px;
   margin-bottom: 20px;
+  width: 100%;
+  @include for-desktop-up {
+    width: 260px;
+  }
 }
 
 .property-item {
   display: flex;
   justify-content: space-between;
-  width: 240px;
+  width: 100%;
   color: $details-card-items-text-color;
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
-.property-span {
+.value-item {
   color: black;
   font-weight: 500;
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 .vote {
+  display: inline-block;
   color: white;
   background-color: $accent-color;
   width: 36px;
@@ -102,16 +127,17 @@ li {
 }
 
 .movie-name {
-  height: 21px;
   @include for-desktop-up {
     font-size: 30px;
   }
 }
 
 .about-movie {
+  width: 100%;
   margin-bottom: 21px;
   margin-top: 10px;
   font-weight: 500;
+  line-height: 20px;
 }
 
 .modal-window-buttons {
@@ -124,11 +150,14 @@ li {
 }
 
 .modal-window-btn {
+  font-weight: 500;
   width: 113px;
   height: 44px;
   background-color: inherit;
   border: 1px solid black;
   border-radius: 5px;
+  cursor: pointer;
+  transition: get-transition-prop(color);
   &:hover,
   &:focus {
     color: white;
