--- a/src/sass/layouts/_one-card.scss
+++ b/src/sass/layouts/_one-card.scss
@@ -1,4 +1,6 @@
 .one-card {
+  position: relative;
+  overflow: hidden;
   &:hover,
   &:focus {
     cursor: pointer;
@@ -68,4 +70,9 @@
     background-color: $accent-color;
     border-radius: 5px;
   }
+}
+.one-card_overlay {
+  display: flex;
+  position: absolute;
+  top: 0px;
 }
