--- a/src/sass/layouts/_films-list-section.scss
+++ b/src/sass/layouts/_films-list-section.scss
@@ -1,8 +1,10 @@
 .films {
   padding-top: 20px;
+  margin-bottom: 40px;
 
   @include for-tablet-up {
     padding-top: 60px;
+    margin-bottom: 50px;
   }
 }
 
