--- a/src/sass/layouts/_pagination.scss
+++ b/src/sass/layouts/_pagination.scss
@@ -67,7 +67,6 @@
   width: auto;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 50px;
   margin-bottom: 60px;
   display: flex;
   justify-content: center;
@@ -104,6 +103,7 @@
   height: 40px;
   margin: 0;
   border-radius: 5px;
+  color: $main-text-color;
   font-weight: 500;
   border: none;
   outline: none;
