--- a/src/templates/modalWindowMovie.hbs
+++ b/src/templates/modalWindowMovie.hbs
@@ -24,7 +24,7 @@
           <li class='value-item'>{{stringGenres}}</li>
         </ul>
       </div>
-      <h3>About</h3>
+      <h3 class="movie__about-header">About</h3>
       <p class='movie__about'>{{overview}}</p>
       <div class='movie__buttons'>
         <button type='button' class='movie__btn' data-action='add-to-watched'>Add wo Watched</button>
